--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Corporate Theme</title>
     <link rel="stylesheet" href="dist/style.css">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-    <script src="dist/script.js"></script>
+<!--    <script src="dist/script.js"></script>-->
 </head>
 <body>
     <div class="px-4 py-4 bg-amber-200">
-        <h2 class="py-2 text-3xl font-black">Hello</h2>
+        <h2 class="py-2 text-3xl font-black text-yellow">Hello</h2>
         <h2 class="px-5 font-bold">Hi there</h2>
         <h3 class="px-1 font-mono">This is a header3</h3>
     </div>
