add default font family: Google's open sans

--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <title>Corporate Theme</title>
     <link rel="stylesheet" href="dist/style.css">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+
 <!--    <script src="dist/script.js"></script>-->
 </head>
 <body>
     <div class="px-4 py-4 bg-amber-200">
-        <h2 class="py-2 text-3xl font-black text-yellow">Hello</h2>
-        <h2 class="px-5 font-bold">Hi there</h2>
-        <h3 class="px-1 font-mono">This is a header3</h3>
+        <h2 class="py-2 text-3xl text-yellow">Hello</h2>
+        <h2 class="px-5 font-semibold ">Hi there</h2>
+        <h3 class="px-1 ">This is a header3</h3>
     </div>
 </body>
 </html>
