add custom text classes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="px-4 py-4 bg-amber-200">
-        <h2 class="py-2 text-3xl text-yellow">Hello</h2>
+        <h2 class="py-2 co-text-h5 text-yellow">Hello</h2>
         <h2 class="px-5 font-semibold ">Hi there</h2>
         <h3 class="px-1 ">This is a header3</h3>
     </div>
