--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Corporate Theme</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
+
     <link rel="stylesheet" href="dist/style.css">
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +27,7 @@
     </style>
 </head>
 <body class="bg-co-bg2">
-<div class="container mx-auto my-0 ">
+<div class="max-w-9 lg:container mx-auto">
 
     <!--Header-->
     <header class="flex justify-between align-middle h-58p pb-3 mt-5 md:mt-10">
@@ -33,51 +37,53 @@
             <label class="w-4 h-4 flex justify-center items-center"><img src="/assets/img/arrow_drop_down.svg" alt="Select country"></label>
         </div>
     </header>
-    <div class="h-1p w-full bg-co-dark-12 mb-148p"></div>
+    <div class="h-1p w-full bg-co-dark-12 mb-16 lg:mb-148p"></div>
 
     <!--Hero Section-->
-    <div class="flex flex-col gap-60p justify-between w-5/6 mx-auto my-0">
+    <div class="flex flex-col gap-30p lg:gap-60p justify-between lg:w-5/6 mx-auto my-0">
         <div class="flex flex-col gap-3.5 items-center text-center">
-            <h5 class="uppercase co-text-h5-capital text-co-yellow">risus praesent vulputate.</h5>
-            <h1 class="co-text-h1">Cursus Consequat Tristique.</h1>
+            <h5 class="uppercase co-text-mo-h5-capital lg:co-text-h5-capital text-co-yellow">risus praesent vulputate.</h5>
+            <h1 class="co-text-mo-h1 lg:co-text-h1">Cursus Consequat Tristique.</h1>
         </div>
-        <div class="flex flex-row gap-3.5 flex-wrap justify-center items-center">
-            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3.5 pr-10 pl-3.5 justify-between items-center co-text-h6">
+
+        <!--Pills-->
+        <div class="flex flex-col lg:flex-row items-center gap-3.5 flex-wrap justify-center">
+            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center co-text-h6">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z" fill="#F9B800"/>
                 </svg>
                 Cursus Integer
             </div>
 
-            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3.5 pr-10 pl-3.5 justify-between items-center co-text-h6">
+            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center co-text-h6">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z" fill="#F9B800"/>
                 </svg>
                 Integer Consequat
             </div>
 
-            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3.5 pr-10 pl-3.5 justify-between items-center co-text-h6">
+            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center co-text-h6">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z" fill="#F9B800"/>
                 </svg>
                 Tellus Euismod Pellentesque
             </div>
 
-            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3.5 pr-10 pl-3.5 justify-between items-center co-text-h6">
+            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center co-text-h6">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z" fill="#F9B800"/>
                 </svg>
                 Aliquot Tristique
             </div>
 
-            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3.5 pr-10 pl-3.5 justify-between items-center co-text-h6">
+            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center co-text-h6">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z" fill="#F9B800"/>
                 </svg>
                 Pellentesque Tempus
             </div>
 
-            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3.5 pr-10 pl-3.5 justify-between items-center co-text-h6">
+            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center co-text-h6">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z" fill="#F9B800"/>
                 </svg>
@@ -85,7 +91,7 @@
             </div>
         </div>
         <div class="flex justify-center">
-            <button class="flex justify-center items-center co-text-button pt-22p pb-6 pl-50p pr-52p rounded-full bg-co-yellow gap-16"> Lorem Ipsum
+            <button class="flex justify-center items-center co-text-button pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-yellow gap-16"> Lorem Ipsum
                 <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z" fill="#262626"/>
                 </svg>
