section1, desktop done

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="h-1p w-full bg-co-dark-12 mb-16 lg:mb-148p"></div>
 
     <!--Hero Section-->
-    <div class="flex flex-col gap-30p lg:gap-60p justify-between lg:w-5/6 mx-auto mb-10">
+    <div class="flex flex-col gap-30p lg:gap-60p justify-between lg:w-5/6 mx-auto mb-10 lg:mb-172p">
         <div class="flex flex-col gap-3.5 items-center text-center">
             <h5 class="uppercase co-text-mo-h5-capital lg:co-text-h5-capital text-co-yellow">risus praesent
                 vulputate.</h5>
@@ -113,18 +113,19 @@
 
 
     <div class="rounded-mobile bg-co-yellow">
-        <div class="container mx-auto max-w-9 flex flex-col gap-30p items-center py-22p">
-            <div>
-                <img src="assets/img/vector-1.svg" alt=" ">
+        <div class="container mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-30p lg:gap:44p items-center py-22p lg:py-135p">
+            <div class="lg:flex-1 flex justify-center">
+                <img src="assets/img/vector-1.svg" alt=" " width="714" height="714">
             </div>
 
-            <div class="flex flex-col gap-30p items-center text-center">
-                <h1 class="co-text-mo-h1">Phasellus a vitae
+            <div class="lg:flex-1 flex justify-center">
+            <div class="flex flex-col gap-30p lg:gap-50p items-center lg:items-start text-center lg:text-left lg:w-[70%]">
+                <h1 class="co-text-mo-h1 lg:co-text-h4">Phasellus a vitae
                     iaculis magna
                     eleifend pulvinar
                     velit odio.</h1>
                 <div class="flex flex-col gap-3">
-                    <p class="co-text-p1_underline">Vulputate et vulputate suspendisse natoque!</p>
+                    <p class="co-text-p1-underline lg:co-text-p1-underline">Vulputate et vulputate suspendisse natoque!</p>
                     <p class="co-text-p1">Euismod magna id purus eget nunc ligula suspendisse dui netus. Condimentum
                         blandit rutrum at mauris enim pulvinar duis etiam duis vulputate et vulputate suspendisse
                         natoque id tellus consectetur pulvinar et. </p>
@@ -136,6 +137,7 @@
                               fill="#FFFFFF"/>
                     </svg>
                 </button>
+            </div>
             </div>
 
         </div>
