--- a/index.html
+++ b/index.html
@@ -112,37 +112,117 @@
     </div>
 
 
-    <div class="rounded-mobile bg-co-yellow">
+    <div class="rounded-mobile bg-co-yellow mb-10">
         <div class="container mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-30p lg:gap:44p items-center py-22p lg:py-135p">
             <div class="lg:flex-1 flex justify-center">
                 <img src="assets/img/vector-1.svg" alt=" " width="714" height="714">
             </div>
 
             <div class="lg:flex-1 flex justify-center">
-            <div class="flex flex-col gap-30p lg:gap-50p items-center lg:items-start text-center lg:text-left lg:w-[70%]">
-                <h1 class="co-text-mo-h1 lg:co-text-h4">Phasellus a vitae
-                    iaculis magna
-                    eleifend pulvinar
-                    velit odio.</h1>
-                <div class="flex flex-col gap-3">
-                    <p class="co-text-p1-underline lg:co-text-p1-underline">Vulputate et vulputate suspendisse natoque!</p>
-                    <p class="co-text-p1">Euismod magna id purus eget nunc ligula suspendisse dui netus. Condimentum
-                        blandit rutrum at mauris enim pulvinar duis etiam duis vulputate et vulputate suspendisse
-                        natoque id tellus consectetur pulvinar et. </p>
+                <div class="flex flex-col gap-30p lg:gap-50p items-center lg:items-start text-center lg:text-left lg:w-[70%]">
+                    <h1 class="co-text-mo-h1 lg:co-text-h4">Phasellus a vitae
+                        iaculis magna
+                        eleifend pulvinar
+                        velit odio.</h1>
+                    <div class="flex flex-col gap-3 text-co-dark">
+                        <p class="co-text-p1-underline lg:co-text-p1-underline">Vulputate et vulputate suspendisse
+                            natoque!</p>
+                        <p class="co-text-p1">Euismod magna id purus eget nunc ligula suspendisse dui netus. Condimentum
+                            blandit rutrum at mauris enim pulvinar duis etiam duis vulputate et vulputate suspendisse
+                            natoque id tellus consectetur pulvinar et. </p>
+                    </div>
+                    <button class="flex justify-center items-center co-text-button text-co-white pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-dark gap-16">
+                        Lorem Ipsum
+                        <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
+                                  fill="#FFFFFF"/>
+                        </svg>
+                    </button>
                 </div>
-                <button class="flex justify-center items-center co-text-button text-co-white pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-dark gap-16">
-                    Lorem Ipsum
-                    <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
-                              fill="#FFFFFF"/>
-                    </svg>
-                </button>
-            </div>
             </div>
 
         </div>
     </div>
 
+    <!--Section 2-->
+    <div class="rounded-mobile bg-co-dark mb-10 pb-5">
+        <div class="container mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-10 lg:gap:44p items-center pt-47p ">
+
+            <div class="flex flex-col items-center gap-30p text-center">
+                <p class="co-text-p1 text-co-yellow">Quisque porttitor vitae vel amet neque scelerisque mattis.
+                    Consectetur nibh velit magna consectetur leo. </p>
+                <h1 class="co-text-mo-h1 lg:co-text-h4 text-co-white">Cursus Integer Conseq Aliquam Tristique. </h1>
+                <button class="flex justify-center items-center co-text-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-white gap-16">
+                    Lorem Ipsum
+                    <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
+                              fill="#262626"/>
+                    </svg>
+                </button>
+            </div>
+
+            <!-- four boxes -->
+            <div class="container mx-auto max-w-95">
+
+                <div class="flex flex-col gap-5">
+
+                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p">
+                        <div class="flex flex-col items-start gap-2.5 w-2/3 mx-auto">
+                            <img src="assets/img/img-1.png" alt=" ">
+                            <div class="flex flex-col gap-9p items-start">
+                                <div class="text-2xl mb-9p"><span class="text-co-dark">1</span><span class="text-co-yellow">.</span>
+                                </div>
+                                <p class="text-2xl font-bold">Phasellus Vitae</p>
+                                <p class="text-xl font-semibold">Quisque</p>
+                                <p class="text-base font-normal">Porttitor vitae vel amet </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p">
+                        <div class="flex flex-col items-start gap-2.5 w-2/3 mx-auto">
+                            <img src="assets/img/img-1.png" alt=" ">
+                            <div class="flex flex-col gap-9p items-start">
+                                <div class="text-2xl mb-9p"><span class="text-co-dark">1</span><span class="text-co-yellow">.</span>
+                                </div>
+                                <p class="text-2xl font-bold">Phasellus Vitae</p>
+                                <p class="text-xl font-semibold">Quisque</p>
+                                <p class="text-base font-normal">Porttitor vitae vel amet </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p">
+                        <div class="flex flex-col items-start gap-2.5 w-2/3 mx-auto">
+                            <img src="assets/img/img-1.png" alt=" ">
+                            <div class="flex flex-col gap-9p items-start">
+                                <div class="text-2xl mb-9p"><span class="text-co-dark">1</span><span class="text-co-yellow">.</span>
+                                </div>
+                                <p class="text-2xl font-bold">Phasellus Vitae</p>
+                                <p class="text-xl font-semibold">Quisque</p>
+                                <p class="text-base font-normal">Porttitor vitae vel amet </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p">
+                        <div class="flex flex-col items-start gap-2.5 w-2/3 mx-auto">
+                            <img src="assets/img/img-1.png" alt=" ">
+                            <div class="flex flex-col gap-9p items-start">
+                                <div class="text-2xl mb-9p"><span class="text-co-dark">1</span><span class="text-co-yellow">.</span>
+                                </div>
+                                <p class="text-2xl font-bold">Phasellus Vitae</p>
+                                <p class="text-xl font-semibold">Quisque</p>
+                                <p class="text-base font-normal">Porttitor vitae vel amet </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
