section2, desktop WIP

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
 
 
-    <div class="rounded-mobile bg-co-yellow mb-10">
+    <div class="rounded-mobile lg:rounded-desktop bg-co-yellow mb-10 lg:mb-150p">
         <div class="container mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-30p lg:gap:44p items-center py-22p lg:py-135p">
             <div class="lg:flex-1 flex justify-center">
                 <img src="assets/img/vector-1.svg" alt=" " width="714" height="714">
@@ -145,14 +145,14 @@
     </div>
 
     <!--Section 2-->
-    <div class="rounded-mobile bg-co-dark mb-10 pb-5">
-        <div class="container mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-10 lg:gap:44p items-center pt-47p ">
+    <div class="rounded-mobile lg:rounded-desktop bg-co-dark mb-10 pb-5 lg:py-58p">
+        <div class="container mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-10 lg:gap-100p items-center pt-47p lg:pt-0">
 
-            <div class="flex flex-col items-center gap-30p text-center">
-                <p class="co-text-p1 text-co-yellow">Quisque porttitor vitae vel amet neque scelerisque mattis.
+            <div class="flex flex-col items-center gap-30p text-center lg:text-left lg:items-start lg:w-2/3 lg:gap-5">
+                <p class="co-text-p1 text-co-yellow lg:pr-50p">Quisque porttitor vitae vel amet neque scelerisque mattis.
                     Consectetur nibh velit magna consectetur leo. </p>
-                <h1 class="co-text-mo-h1 lg:co-text-h4 text-co-white">Cursus Integer Conseq Aliquam Tristique. </h1>
-                <button class="flex justify-center items-center co-text-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-white gap-16">
+                <h1 class="co-text-mo-h1 lg:co-text-h4 text-co-white lg:mb-10">Cursus Integer Conseq Aliquam Tristique. </h1>
+                <button class="flex items-center co-text-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-white gap-16">
                     Lorem Ipsum
                     <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
@@ -162,11 +162,24 @@
             </div>
 
             <!-- four boxes -->
-            <div class="container mx-auto max-w-95">
+            <div class="container mx-auto max-w-95 lg:max-w-full">
 
-                <div class="flex flex-col gap-5">
+                <div class="flex flex-col flex-wrap gap-5 lg:gap-60p  justify-between lg:grid lg:grid-cols-2 lg:grid-cols-2">
 
                     <div class="bg-co-white rounded-box w-full pt-46p pb-52p">
+                        <div class="flex flex-col items-start gap-2.5 w-2/3 mx-auto">
+                            <img src="assets/img/img-1.png" alt=" ">
+                            <div class="flex flex-col gap-9p items-start">
+                                <div class="mb-9p"><span class="text-2xl lg:co-text-h2 text-co-dark">1</span><span class="text-co-yellow text-2xl lg:co-text-h2">.</span>
+                                </div>
+                                <p class="text-2xl font-bold">Phasellus Vitae</p>
+                                <p class="text-xl font-semibold">Quisque</p>
+                                <p class="text-base font-normal">Porttitor vitae vel amet </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p lg:-mb-120p self-end">
                         <div class="flex flex-col items-start gap-2.5 w-2/3 mx-auto">
                             <img src="assets/img/img-1.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
@@ -192,20 +205,7 @@
                         </div>
                     </div>
 
-                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p">
-                        <div class="flex flex-col items-start gap-2.5 w-2/3 mx-auto">
-                            <img src="assets/img/img-1.png" alt=" ">
-                            <div class="flex flex-col gap-9p items-start">
-                                <div class="text-2xl mb-9p"><span class="text-co-dark">1</span><span class="text-co-yellow">.</span>
-                                </div>
-                                <p class="text-2xl font-bold">Phasellus Vitae</p>
-                                <p class="text-xl font-semibold">Quisque</p>
-                                <p class="text-base font-normal">Porttitor vitae vel amet </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p">
+                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p lg:-mb-120p self-end">
                         <div class="flex flex-col items-start gap-2.5 w-2/3 mx-auto">
                             <img src="assets/img/img-1.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
