section2, desktop done

--- a/index.html
+++ b/index.html
@@ -166,54 +166,54 @@
 
                 <div class="flex flex-col flex-wrap gap-5 lg:gap-60p  justify-between lg:grid lg:grid-cols-2 lg:grid-cols-2">
 
-                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p">
-                        <div class="flex flex-col items-start gap-2.5 w-2/3 mx-auto">
+                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p lg:p-50p">
+                        <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img src="assets/img/img-1.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
-                                <div class="mb-9p"><span class="text-2xl lg:co-text-h2 text-co-dark">1</span><span class="text-co-yellow text-2xl lg:co-text-h2">.</span>
+                                <div class="mb-9p"><span class="text-[66px] font-bold lg:co-text-h2 text-co-dark">1</span><span class="text-[66px] font-bold text-co-yellow lg:co-text-h2">.</span>
                                 </div>
-                                <p class="text-2xl font-bold">Phasellus Vitae</p>
-                                <p class="text-xl font-semibold">Quisque</p>
-                                <p class="text-base font-normal">Porttitor vitae vel amet </p>
+                                <p class="text-2xl font-bold lg:co-text-button">Phasellus Vitae</p>
+                                <p class="text-xl font-semibold lg:co-text-h6 ">Quisque</p>
+                                <p class="text-base font-normal lg:co-text-p2 lg:mb-1.5">Porttitor vitae vel amet.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p lg:-mb-120p self-end">
-                        <div class="flex flex-col items-start gap-2.5 w-2/3 mx-auto">
-                            <img src="assets/img/img-1.png" alt=" ">
+                    <div class="bg-co-yellow rounded-box w-full pt-46p pb-52p lg:p-50p lg:-mb-120p lg:self-end">
+                        <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
+                            <img src="assets/img/img-2.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
-                                <div class="text-2xl mb-9p"><span class="text-co-dark">1</span><span class="text-co-yellow">.</span>
+                                <div class="mb-9p"><span class="text-[66px] font-bold lg:co-text-h2 text-co-dark">2</span><span class="text-[66px] font-bold text-co-white lg:co-text-h2">.</span>
                                 </div>
-                                <p class="text-2xl font-bold">Phasellus Vitae</p>
-                                <p class="text-xl font-semibold">Quisque</p>
-                                <p class="text-base font-normal">Porttitor vitae vel amet </p>
+                                <p class="text-2xl font-bold lg:co-text-button">Iaculis Magna</p>
+                                <p class="text-xl font-semibold lg:co-text-h6 ">Porttitor</p>
+                                <p class="text-base font-normal lg:co-text-p2 lg:mb-1.5">neque scelerisque mattis. </p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p">
-                        <div class="flex flex-col items-start gap-2.5 w-2/3 mx-auto">
-                            <img src="assets/img/img-1.png" alt=" ">
+                    <div class="bg-co-yellow rounded-box w-full pt-46p pb-52p lg:p-50p">
+                        <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
+                            <img src="assets/img/img-3.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
-                                <div class="text-2xl mb-9p"><span class="text-co-dark">1</span><span class="text-co-yellow">.</span>
+                                <div class="mb-9p"><span class="text-[66px] font-bold lg:co-text-h2 text-co-dark">3</span><span class="text-[66px] font-bold text-co-white lg:co-text-h2">.</span>
                                 </div>
-                                <p class="text-2xl font-bold">Phasellus Vitae</p>
-                                <p class="text-xl font-semibold">Quisque</p>
-                                <p class="text-base font-normal">Porttitor vitae vel amet </p>
+                                <p class="text-2xl font-bold lg:co-text-button">Eleifend Pulvinar</p>
+                                <p class="text-xl font-semibold lg:co-text-h6 ">Vitae</p>
+                                <p class="text-base font-normal lg:co-text-p2 lg:mb-1.5">Consectetue Nibh Velit.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p lg:-mb-120p self-end">
-                        <div class="flex flex-col items-start gap-2.5 w-2/3 mx-auto">
+                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p lg:p-50p lg:-mb-120p lg:self-end">
+                        <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img src="assets/img/img-1.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
-                                <div class="text-2xl mb-9p"><span class="text-co-dark">1</span><span class="text-co-yellow">.</span>
+                                <div class="mb-9p"><span class="text-[66px] font-bold lg:co-text-h2 text-co-dark">1</span><span class="text-[66px] font-bold text-co-yellow lg:co-text-h2">.</span>
                                 </div>
-                                <p class="text-2xl font-bold">Phasellus Vitae</p>
-                                <p class="text-xl font-semibold">Quisque</p>
-                                <p class="text-base font-normal">Porttitor vitae vel amet </p>
+                                <p class="text-2xl font-bold lg:co-text-button">Velito Odio Phire</p>
+                                <p class="text-xl font-semibold lg:co-text-h6 ">Ameteneq</p>
+                                <p class="text-base font-normal lg:co-text-p2 lg:mb-1.5">Magna Consectetur Leo.</p>
                             </div>
                         </div>
                     </div>
