change font size classes, using tailwind theme extend

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     <!--Hero Section-->
     <div class="flex flex-col gap-30p lg:gap-60p justify-between lg:w-5/6 mx-auto mb-10 lg:mb-172p">
         <div class="flex flex-col gap-3.5 items-center text-center">
-            <h5 class="uppercase co-text-mo-h5-capital lg:co-text-h5-capital text-co-yellow">risus praesent
+            <h5 class="uppercase text-co-mo-h5-capital lg:text-co-h5-capital text-co-yellow">risus praesent
                 vulputate.</h5>
-            <h1 class="co-text-mo-h1 lg:co-text-h1">Cursus Consequat Tristique.</h1>
+            <h1 class="text-co-mo-h1 lg:text-co-h1">Cursus Consequat Tristique.</h1>
         </div>
 
         <!--Pills-->
         <div class="flex flex-col lg:flex-row items-center gap-3.5 flex-wrap justify-center">
-            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center co-text-h6">
+            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
                           fill="#F9B800"/>
@@ -60,7 +60,7 @@
                 Cursus Integer
             </div>
 
-            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center co-text-h6">
+            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
                           fill="#F9B800"/>
@@ -68,7 +68,7 @@
                 Integer Consequat
             </div>
 
-            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center co-text-h6">
+            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
                           fill="#F9B800"/>
@@ -76,7 +76,7 @@
                 Tellus Euismod Pellentesque
             </div>
 
-            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center co-text-h6">
+            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
                           fill="#F9B800"/>
@@ -84,7 +84,7 @@
                 Aliquot Tristique
             </div>
 
-            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center co-text-h6">
+            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
                           fill="#F9B800"/>
@@ -92,7 +92,7 @@
                 Pellentesque Tempus
             </div>
 
-            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center co-text-h6">
+            <div class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
                           fill="#F9B800"/>
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="flex justify-center">
-            <button class="flex justify-center items-center co-text-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-yellow gap-16">
+            <button class="flex justify-center items-center text-co-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-yellow gap-16">
                 Lorem Ipsum
                 <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
@@ -120,18 +120,18 @@
 
             <div class="lg:flex-1 flex justify-center">
                 <div class="flex flex-col gap-30p lg:gap-50p items-center lg:items-start text-center lg:text-left lg:w-[70%]">
-                    <h1 class="co-text-mo-h1 lg:co-text-h4">Phasellus a vitae
+                    <h1 class="text-co-mo-h1 lg:text-co-h4">Phasellus a vitae
                         iaculis magna
                         eleifend pulvinar
                         velit odio.</h1>
                     <div class="flex flex-col gap-3 text-co-dark">
-                        <p class="co-text-p1-underline lg:co-text-p1-underline">Vulputate et vulputate suspendisse
+                        <p class="text-co-p1-underline lg:text-co-p1-underline">Vulputate et vulputate suspendisse
                             natoque!</p>
-                        <p class="co-text-p1">Euismod magna id purus eget nunc ligula suspendisse dui netus. Condimentum
+                        <p class="text-co-p1">Euismod magna id purus eget nunc ligula suspendisse dui netus. Condimentum
                             blandit rutrum at mauris enim pulvinar duis etiam duis vulputate et vulputate suspendisse
                             natoque id tellus consectetur pulvinar et. </p>
                     </div>
-                    <button class="flex justify-center items-center co-text-button text-co-white pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-dark gap-16">
+                    <button class="flex justify-center items-center text-co-button text-co-white pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-dark gap-16">
                         Lorem Ipsum
                         <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
@@ -149,10 +149,10 @@
         <div class="container mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-10 lg:gap-100p items-center pt-47p lg:pt-0">
 
             <div class="flex flex-col items-center gap-30p text-center lg:text-left lg:items-start lg:w-2/3 lg:gap-5">
-                <p class="co-text-p1 text-co-yellow lg:pr-50p">Quisque porttitor vitae vel amet neque scelerisque mattis.
+                <p class="text-co-p1 text-co-yellow lg:pr-50p">Quisque porttitor vitae vel amet neque scelerisque mattis.
                     Consectetur nibh velit magna consectetur leo. </p>
-                <h1 class="co-text-mo-h1 lg:co-text-h4 text-co-white lg:mb-10">Cursus Integer Conseq Aliquam Tristique. </h1>
-                <button class="flex items-center co-text-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-white gap-16">
+                <h1 class="text-co-mo-h1 lg:text-co-h4 text-co-white lg:mb-10">Cursus Integer Conseq Aliquam Tristique. </h1>
+                <button class="flex items-center text-co-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-white gap-16">
                     Lorem Ipsum
                     <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
@@ -166,54 +166,54 @@
 
                 <div class="flex flex-col flex-wrap gap-5 lg:gap-60p  justify-between lg:grid lg:grid-cols-2 lg:grid-cols-2">
 
-                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p lg:p-50p">
+                    <div class="bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-50p">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img src="assets/img/img-1.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
-                                <div class="mb-9p"><span class="text-[66px] font-bold lg:co-text-h2 text-co-dark">1</span><span class="text-[66px] font-bold text-co-yellow lg:co-text-h2">.</span>
+                                <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2 text-co-dark">1</span><span class="text-[66px] font-bold text-co-yellow lg:text-co-h2">.</span>
                                 </div>
-                                <p class="text-2xl font-bold lg:co-text-button">Phasellus Vitae</p>
-                                <p class="text-xl font-semibold lg:co-text-h6 ">Quisque</p>
-                                <p class="text-base font-normal lg:co-text-p2 lg:mb-1.5">Porttitor vitae vel amet.</p>
+                                <p class="text-2xl font-bold lg:text-co-button">Phasellus Vitae</p>
+                                <p class="text-xl font-semibold lg:text-co-h6 ">Quisque</p>
+                                <p class="text-base font-normal lg:text-co-p2 lg:mb-1.5">Porttitor vitae vel amet.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="bg-co-yellow rounded-box w-full pt-46p pb-52p lg:p-50p lg:-mb-120p lg:self-end">
+                    <div class="bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-50p lg:-mb-120p lg:self-end">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img src="assets/img/img-2.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
-                                <div class="mb-9p"><span class="text-[66px] font-bold lg:co-text-h2 text-co-dark">2</span><span class="text-[66px] font-bold text-co-white lg:co-text-h2">.</span>
+                                <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2 text-co-dark">2</span><span class="text-[66px] font-bold text-co-white lg:text-co-h2">.</span>
                                 </div>
-                                <p class="text-2xl font-bold lg:co-text-button">Iaculis Magna</p>
-                                <p class="text-xl font-semibold lg:co-text-h6 ">Porttitor</p>
-                                <p class="text-base font-normal lg:co-text-p2 lg:mb-1.5">neque scelerisque mattis. </p>
+                                <p class="text-2xl font-bold lg:text-co-button">Iaculis Magna</p>
+                                <p class="text-xl font-semibold lg:text-co-h6 ">Porttitor</p>
+                                <p class="text-base font-normal lg:text-co-p2 lg:mb-1.5">neque scelerisque mattis. </p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="bg-co-yellow rounded-box w-full pt-46p pb-52p lg:p-50p">
+                    <div class="bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-50p">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img src="assets/img/img-3.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
-                                <div class="mb-9p"><span class="text-[66px] font-bold lg:co-text-h2 text-co-dark">3</span><span class="text-[66px] font-bold text-co-white lg:co-text-h2">.</span>
+                                <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2 text-co-dark">3</span><span class="text-[66px] font-bold text-co-white lg:text-co-h2">.</span>
                                 </div>
-                                <p class="text-2xl font-bold lg:co-text-button">Eleifend Pulvinar</p>
-                                <p class="text-xl font-semibold lg:co-text-h6 ">Vitae</p>
-                                <p class="text-base font-normal lg:co-text-p2 lg:mb-1.5">Consectetue Nibh Velit.</p>
+                                <p class="text-2xl font-bold lg:text-co-button">Eleifend Pulvinar</p>
+                                <p class="text-xl font-semibold lg:text-co-h6 ">Vitae</p>
+                                <p class="text-base font-normal lg:text-co-p2 lg:mb-1.5">Consectetue Nibh Velit.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="bg-co-white rounded-box w-full pt-46p pb-52p lg:p-50p lg:-mb-120p lg:self-end">
+                    <div class="bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-50p lg:-mb-120p lg:self-end">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img src="assets/img/img-1.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
-                                <div class="mb-9p"><span class="text-[66px] font-bold lg:co-text-h2 text-co-dark">1</span><span class="text-[66px] font-bold text-co-yellow lg:co-text-h2">.</span>
+                                <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2 text-co-dark">1</span><span class="text-[66px] font-bold text-co-yellow lg:text-co-h2">.</span>
                                 </div>
-                                <p class="text-2xl font-bold lg:co-text-button">Velito Odio Phire</p>
-                                <p class="text-xl font-semibold lg:co-text-h6 ">Ameteneq</p>
-                                <p class="text-base font-normal lg:co-text-p2 lg:mb-1.5">Magna Consectetur Leo.</p>
+                                <p class="text-2xl font-bold lg:text-co-button">Velito Odio Phire</p>
+                                <p class="text-xl font-semibold lg:text-co-h6 ">Ameteneq</p>
+                                <p class="text-base font-normal lg:text-co-p2 lg:mb-1.5">Magna Consectetur Leo.</p>
                             </div>
                         </div>
                     </div>
