--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
                         </div>
                     </div>
 
-                    <div class="bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-50p">
+                    <div class="bg-co-white lg:bg-co-yellow rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-50p">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                             <img src="assets/img/img-3.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
-                                <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2 text-co-dark">3</span><span class="text-[66px] font-bold text-co-white lg:text-co-h2">.</span>
+                                <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2 text-co-dark">3</span><span class="text-[66px] font-bold text-co-yellow lg:text-co-white lg:text-co-h2">.</span>
                                 </div>
                                 <p class="text-2xl font-bold lg:text-co-button">Eleifend Pulvinar</p>
                                 <p class="text-xl font-semibold lg:text-co-h6 ">Vitae</p>
@@ -205,11 +205,11 @@
                         </div>
                     </div>
 
-                    <div class="bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-50p lg:-mb-120p lg:self-end">
+                    <div class="bg-co-yellow lg:bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-50p lg:-mb-120p lg:self-end">
                         <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
-                            <img src="assets/img/img-1.png" alt=" ">
+                            <img src="assets/img/img-4.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
-                                <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2 text-co-dark">1</span><span class="text-[66px] font-bold text-co-yellow lg:text-co-h2">.</span>
+                                <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2 text-co-dark">4</span><span class="text-[66px] font-bold text-co-white lg:text-co-yellow lg:text-co-h2">.</span>
                                 </div>
                                 <p class="text-2xl font-bold lg:text-co-button">Velito Odio Phire</p>
                                 <p class="text-xl font-semibold lg:text-co-h6 ">Ameteneq</p>
