switch to custom breakpoints

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body class="bg-co-bg2">
-<div class="max-w-9 lg:container mx-auto">
+<div class="co-container mx-auto">
 
     <!--Header-->
     <header class="flex justify-between align-middle h-58p pb-3 mt-5 md:mt-10">
@@ -113,7 +113,7 @@
 
 
     <div class="rounded-mobile lg:rounded-desktop bg-co-yellow mb-10 lg:mb-150p">
-        <div class="container mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-30p lg:gap:44p items-center py-22p lg:py-135p">
+        <div class="mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-30p lg:gap:44p items-center py-22p lg:py-135p">
             <div class="lg:flex-1 flex justify-center">
                 <img src="assets/img/vector-1.svg" alt=" " width="714" height="714">
             </div>
@@ -145,8 +145,8 @@
     </div>
 
     <!--Section 2-->
-    <div class="rounded-mobile lg:rounded-desktop bg-co-dark mb-10 pb-5 lg:py-58p">
-        <div class="container mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-10 lg:gap-100p items-center pt-47p lg:pt-0">
+    <div class="rounded-mobile lg:rounded-desktop bg-co-dark mb-10 pb-5 lg:py-58p lg:mb-150p">
+        <div class="mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-10 lg:gap-100p items-center pt-47p lg:pt-0">
 
             <div class="flex flex-col items-center gap-30p text-center lg:text-left lg:items-start lg:w-2/3 lg:gap-5">
                 <p class="text-co-p1 text-co-yellow lg:pr-50p">Quisque porttitor vitae vel amet neque scelerisque mattis.
@@ -162,7 +162,7 @@
             </div>
 
             <!-- four boxes -->
-            <div class="container mx-auto max-w-95 lg:max-w-full">
+            <div class="mx-auto max-w-95 lg:max-w-full">
 
                 <div class="flex flex-col flex-wrap gap-5 lg:gap-60p  justify-between lg:grid lg:grid-cols-2 lg:grid-cols-2">
 
